small header, footer fixes
fixed fixed headers collapsing on 'headers & footers' page
fixed overlapping headers z-indexes on 'headers & footers' page
fixed footer column subscribe heading alignmnent on desktop
fixed footer column cursor
added minimal padding (.full-width-container) to creative footer

--- a/src/components/common.blocks/footer/footer.sass
+++ b/src/components/common.blocks/footer/footer.sass
@@ -49,9 +49,9 @@
       text-transform: uppercase
       text-align: center
       line-height: 26px
-      cursor: pointer
 
       &--expandable
+        cursor: pointer
 
         &::after
           @extend .material-icons
@@ -62,10 +62,13 @@
           transition: all .1s
 
         @include fw.media('>=footcols')
-          text-align: left
+          cursor: default
 
           &::after
             display: none
+
+      @include fw.media('>=footcols')
+        text-align: left
 
       &--expanded::after
         transform: rotate(-180deg)
