--- a/src/components/common.blocks/header/header.sass
+++ b/src/components/common.blocks/header/header.sass
@@ -8,7 +8,6 @@
     margin: 30px
 
 .main-header
-  // position: relative
   position: fixed
   width: 100%
   display: flex
@@ -19,7 +18,13 @@
   font-size: 1.4rem
   z-index: 50
 
+  // fix for uikit headers-footers page
+  + .main-header
+    z-index: 49
+  // end fix
+
   &__logo
+    position: relative
     max-width: 40px
     overflow: hidden
 
@@ -44,6 +49,9 @@
     margin-left: auto
     text-align: center
 
+    z-index: 51
+
+
     &--expanded
       position: absolute
       top: 100%
@@ -58,8 +66,6 @@
       background: #fff
       border-top: 1px solid fw.$dark10
       box-shadow: 0 4px 4px fw.$dark10
-
-      z-index: 20
 
     @include fw.media('>=tablet')
       display: block
