--- a/src/pages/headers-footers/headers-footers.sass
+++ b/src/pages/headers-footers/headers-footers.sass
@@ -2,3 +2,6 @@
 
 .page--layout_headers-footers
   background: forward.$dark05
+
+  &__non-fixed-header
+    position: relative !important
